Fixed variable name typo for move generation.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <script>
       document.getElementById("generator").onclick = () => {
-        document.getElementById("result").innerText = ChessRandom.generateRandomGame(document.getElementById("depth").value).moves;
+        document.getElementById("result").innerText = ChessRandomSANNumbered.generateRandomGameString(document.getElementById("depth").value).movesString;
       }
     </script>
   </body>
